# AI_Planet_backend

./: .gitignore  LICENCE  README.md  obsidian.md  pyproject.toml  requirements.txt
AI_Planet_backend/: main.py  test_main.py
app/: config.py  database.py  main.py  test_main.py
app/api/routes/: upload.py  websocket.py
app/models/: pdf_upload.py
app/services/: pdf_processor.py  websocket_manager.py
app/utils/: exceptions.py
docs/source/: conf.py  index.rst
docs/source/api/: models.rst  routes.rst  services.rst  utils.rst
frontend/: index.html
